--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "mariadb": "^3.0.0",
+    "nodemailer": "^6.7.5",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
