feat: set smtp credential from .env

--- a/.env.sample
+++ b/.env.sample
@@ -26,3 +26,8 @@ BEARER=Bearer
 COOKIES_SECRET=random_secret_key
 
 CORS_ORIGIN_WHITELIST=http://localhost:3001
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
